<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Appname -->
    <string name="app_name">Notepad</string>

    <!-- Titelbarstrings -->
    <string name="titel_start_activity">Notes</string>
    <string name="titel_notiz_acitivity">Note</string>

    <!-- Fehlermeldungen -->
    <string name="datei_lese_fehler">Error reading file!</string>
    <string name="datei_speichern_fehler">Error writing file! Copied text to Clipboard</string>
    <string name="ordner_erstellen_fehler">Folder could not be created!</string>
    <string name="init_fehler">Error populating the list!</string>
    <string name="simple_error">Error!</string>
    <string name="share_error">Error while sharing!</string>
    <string name="no_external_storage_found">No external storage found!</string>
    <string name="cant_move_file">Can not move file!</string>
    <string name="clipboard_paste_fehler">Just text is allowed!</string>
    <string name="error_cannot_read_file">Can\'t read file</string>

    <!-- Textbox -->
    <string name="insert_text_here">Enter text here</string>

    <!-- Items -->
    <string name="settings_title">Settings</string>
    <string name="new_notiz">New note</string>
    <string name="delete_notice">Delete</string>
    <string name="save_notice">Save notice</string>
    <string name="share">Share</string>
    <string name="share_title">Share with</string>
    <string name="select_all">Select all files</string>
    <string name="sortieren_nach">Sort by</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_importance">Sort by importance</string>
    <string name="not_sorted">Do not sort</string>
    <string name="zwischenspeichern">Save</string>
    <!--<string name="sync_title">syncronise</string>-->


    <!-- EditBar -->
    <string name="insert_tab">Insert Tab</string>
    <string name="show_list">Show List</string>

    <!-- OverlayButtons -->
    <string name="cancel_button_text">Cancel</string>
    <string name="ok_button_text">OK</string>
    <string name="new_file">New File</string>
    <string name="shareReceiverTitle">Choose a File</string>

    <!-- Settings -->
    <string name="automatic_capital">Auto capitalization</string>
    <string name="Indication_of_notes">Maximal lines</string>
    <string name="summary_capital_setting">Capitalize the first word of each sentence automatically</string>
    <string name="max_rows_summary">Indicates how many lines are maximally displayed</string>
    <string name="font_size">Textsize</string>
    <string name="folder_destination">Folder Destination</string>
    <string name="color_preference_titlebar_title">Color of titlebar</string>
    <string name="color_preference_titlebar_summary">Choose your color for the titlebar</string>
    <string name="color_preference_editbar_title">Color of editor bar</string>
    <string name="color_preference_editbar_summary">Choose your color for the editor bar</string>

    <!-- Dialog -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="file">File</string>
    <string name="text">Text</string>
    <string name="move_files_dialog_message">Move Notices?</string>
    <string name="delete_file_dialog_message">Delete Notice?</string>
    <string name="name_file_dialog_message">Give the note a name!</string>
    <string name="progress_dialog_message">Please wait!</string>
    <string name="tab" translatable="false">"     "</string>
    <string name="listString" translatable="false">"     - "</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="name_aendern">Change Name</string>
    <string name="favorisieren">Favor it</string>
    <string name="dringend">Urgent!!!</string>
    <string name="wichtig">Important!!</string>
    <string name="hat_zeit">Take time!</string>
    <string name="zurueck_setzen">Reset</string>
    <string name="no_name_given">No name given</string>
    <string name="share_file_dialog_message">Share as File or Text?</string>

    <!-- Information -->
    <string name="info_copied_to_clipboard">Copied text to Clipboard</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="sort_by_name_desc">Sort by: Z -> A</string>
    <string name="sort_by_name_asc">Sort by: A -> Z</string>
    <string name="sort_by_date_desc">Sort by: Old -> New</string>
    <string name="sort_by_date_asc">Sort by: New -> Old</string>
    <string name="sort_by_importance_desc">Sort by: Not Important -> Urgent</string>
    <string name="sort_by_importance_asc">Sort by: Urgent -> Not Important</string>
    <string name="info_nichtspeicherbare_zeichen">Text contains unstoreable characters!</string>
    <string name="info_notiz_gespeichert">Note saved</string>
    <string name="sum_up_title">Calculate Sum</string>
    <string name="sum_result">Sum =</string>

    <!-- Neues --><!-- Nur dass alles hier eingefügt wird und nicht da oben -->
    <string name="Neu">Neues hier drunter…</string>

</resources>
