<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/new_notiz"
        android:icon="@mipmap/new_notice"
        android:title="@string/new_notiz"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/delete"
        android:icon="@mipmap/delete"
        android:title="@string/delete_notice"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/share"
        android:icon="@mipmap/share"
        android:title="@string/share"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/select_all"
        android:icon="@mipmap/select_all"
        android:title="@string/select_all"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings_title"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menuSort"
        android:title="@string/sortieren_nach"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/menuNoSort"
                android:title="@string/not_sorted"/>
            <item
                android:id="@+id/menuSortName"
                android:title="@string/sort_by_name"/>
            <item
                android:id="@+id/menuSortDate"
                android:title="@string/sort_by_date"/>
            <item
                android:id="@+id/menuSortFavor"
                android:title="@string/sort_by_importance"/>
        </menu>
    </item>
</menu>