<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/naming"
        android:orderInCategory="100"
        android:title="@string/name_aendern"
        app:showAsAction="never"/>
    <item
        android:id="@+id/wichtigkeit"
        android:orderInCategory="200"
        android:title="@string/favorisieren"
        app:showAsAction="never"/>
    <item
        android:id="@+id/zwischenspeichern"
        android:orderInCategory="300"
        android:title="@string/zwischenspeichern"
        app:showAsAction="never"/>
    <item
        android:id="@+id/delete"
        android:orderInCategory="400"
        android:title="@string/delete_notice"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="500"
        android:title="@string/settings_title"
        app:showAsAction="never"/>
    <item
        android:id="@+id/share"
        android:icon="@mipmap/share"
        android:orderInCategory="100"
        android:title="@string/share"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/save"
        android:icon="@mipmap/save"
        android:orderInCategory="200"
        android:title="@string/save_notice"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/sum_up"
        android:orderInCategory="600"
        android:title="@string/sum_up_title"
        app:showAsAction="never" />
</menu>